[gd_scene load_steps=6 format=3 uid="uid://ctl8tli74apuc"]

[ext_resource type="Script" uid="uid://dtcyfy00m0gmu" path="res://prefab_scripts/projectile.gd" id="1_ayxiv"]
[ext_resource type="Texture2D" uid="uid://d28tl2x0aewn7" path="res://sprites/light_texture.png" id="3_76j53"]
[ext_resource type="Texture2D" uid="uid://c4q4hkxobwlca" path="res://sprites/PlayerStuff/Bullet.png" id="4_vuud1"]
[ext_resource type="Texture2D" uid="uid://hmxj5jbepehq" path="res://sprites/GooberStuff/SlimeBullet.png" id="5_dkppa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77cen"]
size = Vector2(6, 13)

[node name="projectile" type="Area2D"]
rotation = 1.5707964
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ayxiv")
speed = 900.0

[node name="sprite" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
rotation = -1.5707964
texture = ExtResource("4_vuud1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.756113e-08, 0.5)
shape = SubResource("RectangleShape2D_77cen")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.16
texture = ExtResource("3_76j53")
texture_scale = 0.6

[node name="sprites" type="Node2D" parent="."]
visible = false

[node name="player_bullet" type="Sprite2D" parent="sprites"]
modulate = Color(1.9279656, 1.9279656, 1.9279656, 1)
rotation = -1.5707964
texture = ExtResource("4_vuud1")

[node name="slime_bullet" type="Sprite2D" parent="sprites"]
visible = false
position = Vector2(-2.3841858e-07, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_dkppa")

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
